--- a/DEprop/ModeratorTestsAddPage.xaml
+++ b/DEprop/ModeratorTestsAddPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="DEprop.ModeratorAnswersAddPage"
+﻿<Page x:Class="DEprop.ModeratorTestsAddPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,15 +6,15 @@
       xmlns:local="clr-namespace:DEprop"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="ModeratorAnswersAddPage">
+      Title="ModeratorTestsAddPage">
 
     <Grid>
         <DataGrid x:Name="MainPlace" Width="1462" Height="845" AutoGenerateColumns="False" IsReadOnly="True">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Номер ответа" Binding="{Binding AnswerId}" Width="100"></DataGridTextColumn>
-                <DataGridTextColumn Header="Название ответа" Binding="{Binding AnswerName}" Width="300"></DataGridTextColumn>
-                <DataGridTextColumn Header="Флаг правильности" Binding="{Binding AnswerTF}" Width="100"></DataGridTextColumn>
-                <DataGridTextColumn Header="Номер вопроса" Binding="{Binding QuestionId}" Width="100"></DataGridTextColumn>
+                <DataGridTextColumn Header="Номер теста" Binding="{Binding TestId}" Width="100"></DataGridTextColumn>
+                <DataGridTextColumn Header="Максимальный счет" Binding="{Binding TestMaxScore}" Width="100"></DataGridTextColumn>
+                <DataGridTextColumn Header="Минимальный счет" Binding="{Binding TestMinScore}" Width="100"></DataGridTextColumn>
+                <DataGridTextColumn Header="Номер вопроса" Binding="{Binding ChapterId}" Width="100"></DataGridTextColumn>
                 <DataGridTemplateColumn>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
