--- a/DEprop/UserWindow.xaml
+++ b/DEprop/UserWindow.xaml
@@ -35,10 +35,11 @@
             <Label Margin="50 0 0 0" VerticalAlignment="Center" Content="Мои оценки" Name="ToEsts" Style="{StaticResource ResourceKey=labelHeader}" MouseUp="ToEsts_MouseUp"></Label>
             <Label Margin="30 0 0 0" VerticalAlignment="Center" Content="Мой профиль" Name="ToProfile" Style="{StaticResource ResourceKey=labelHeader}" MouseUp="ToProfile_MouseUp"></Label>
             <Label Margin="30 0 0 0" VerticalAlignment="Center" Content="Главы" Name="ToChapters" Style="{StaticResource ResourceKey=labelHeader}" MouseUp="ToChapters_MouseUp"></Label>
+            <Button Margin="450 0 0 0" FontSize="24" Content="Выйти"  HorizontalAlignment="Right" Width="150" Height="50" Background="DeepSkyBlue" Name="ExtBtn" Click="ExtBtn_Click"></Button>
         </StackPanel>
-        <Frame NavigationUIVisibility="Hidden" Grid.Column="1" Grid.Row="1" Name="MainFrame" HorizontalAlignment="Center"  Height="550"/>
+        <Frame NavigationUIVisibility="Hidden" Grid.Column="1" Grid.Row="1" Name="MainFrame"/>
         <Line Grid.Row="0" Grid.ColumnSpan="3" VerticalAlignment="Bottom" Height="1"></Line>
         <Line Grid.Row="3"  Grid.ColumnSpan="3" VerticalAlignment="Top" Height="1"></Line>
-        <Button Grid.Row="2" FontSize="32" Content="Добавить" HorizontalAlignment="Center" Width="250" Height="50" Background="DeepSkyBlue" Name="PositionAdd" Click="PositionAdd_Click" Grid.Column="1" />
+        
     </Grid>
 </Window>
